@@ -5,12 +5,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <!-- Module Metadata -->
-  <!-- Parent is TBD <parent> <groupId>org.ihtsdo.otf</groupId> <artifactId>otf-parent</artifactId> 
+  <!-- Parent is TBD <parent> <groupId>org.ihtsdo.otf</groupId> <artifactId>otf-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version> <relativePath/> </parent> -->
 
   <groupId>org.ihtsdo.otf.mapping</groupId>
   <artifactId>mapping-parent</artifactId>
-  <version>1.7.69</version>
+  <version>1.7.70</version>
   <packaging>pom</packaging>
   <name>IHTSDO Mapping Service Parent</name>
   <description>Parent project for mapping service</description>
@@ -21,61 +21,67 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <amazonaws.version>1.11.623</amazonaws.version>
-    <apache.poi>4.1.1</apache.poi>
-    <asm.version>20041228.180559</asm.version>
+    <amazonaws.version>2.29.33</amazonaws.version>
+    <apache.poi>5.3.0</apache.poi>
+    <asm.version>9.5</asm.version>
     <cglib.version>3.3.0</cglib.version>
-    <commons-io.version>2.14.0</commons-io.version>
-    
+    <commons-io.version>2.18.0</commons-io.version>
+    <bytebuddy.version>1.14.11</bytebuddy.version>
+
     <!-- Set hibernate versions -->
-    <hibernate.c3p0.version>5.4.24.Final</hibernate.c3p0.version>
-    <hibernate.core.version>5.4.24.Final</hibernate.core.version>
-    <hibernate.entitymanager.version>5.4.24.Final</hibernate.entitymanager.version>
-    <hibernate.envers.version>5.4.24.Final</hibernate.envers.version>
-    <hibernate.search.version>5.11.2.Final</hibernate.search.version>
-    <hibernate.validator.version>6.0.17.Final</hibernate.validator.version>
-    
-    <java.version>11</java.version>
+    <hibernate.c3p0.version>5.6.15.Final</hibernate.c3p0.version>
+    <hibernate.core.version>5.6.15.Final</hibernate.core.version>
+    <hibernate.entitymanager.version>5.6.15.Final</hibernate.entitymanager.version>
+    <hibernate.envers.version>5.6.15.Final</hibernate.envers.version>
+    <hibernate.search.version>5.11.10.Final</hibernate.search.version>
+    <hibernate.validator.version>6.2.5.Final</hibernate.validator.version>
+
+    <java.version>17</java.version>
     <javax.mail.version>1.6.2</javax.mail.version>
     <javax.servlet.version>4.0.1</javax.servlet.version>
     <javax.transaction.version>1.1</javax.transaction.version>
     <javax.ws.version>2.1.1</javax.ws.version>
     <javax.xml.bind.version>2.3.1</javax.xml.bind.version>
-    
+    <jakarta.validation.version>2.0.2</jakarta.validation.version>
+
     <jaxb.runtime.version>2.4.0-b180830.0438</jaxb.runtime.version>
     <sun.xml.jaxb-core.version>2.3.0.1</sun.xml.jaxb-core.version>
     <sun.xml.jaxb-impl.version>2.3.2</sun.xml.jaxb-impl.version>
-    
-    <jersey.core.version>2.29</jersey.core.version>
-    <jersey.media.version>2.29</jersey.media.version>
-    <jersey.version>2.29</jersey.version>
+
+    <jackson.version>2.18.2</jackson.version>
+    <jersey.core.version>2.45</jersey.core.version>
+    <jersey.media.version>2.45</jersey.media.version>
+    <jersey.version>2.45</jersey.version>
     <jettison.version>1.5.4</jettison.version>
     <junit.version>4.13.1</junit.version>
     <lucene.version>5.5.5</lucene.version>
-    
+
     <!-- Set maven plugin versions -->
-    <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
-    <maven.invoker.version>3.0.1</maven.invoker.version>
+    <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
+    <maven.invoker.version>3.3.0</maven.invoker.version>
+    <!-- not used -->
     <maven.javadoc.skip>true</maven.javadoc.skip>
     <maven.model.version>3.6.2</maven.model.version>
-    <maven.plugin.annotations.version>3.6.0</maven.plugin.annotations.version>
-    <maven.plugin.api.version>3.6.2</maven.plugin.api.version>
+    <maven.plugin.annotations.version>3.9.0</maven.plugin.annotations.version>
+    <maven.plugin.api.version>3.9.9</maven.plugin.api.version>
+    <maven.plugin.plugin.version>3.9.0</maven.plugin.plugin.version>
     <maven.resources.plugin.version>2.7</maven.resources.plugin.version>
-    <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
-    <maven.war.plugin.version>2.6</maven.war.plugin.version>
+    <maven.surefire.plugin.version>3.1.2</maven.surefire.plugin.version>
+    <maven.war.plugin.version>3.4.0</maven.war.plugin.version>
+    <mysql.connector.java.version>9.1.0</mysql.connector.java.version>
 
     <!-- <mysql.connector.java.version>8.0.28</mysql.connector.java.version> -->
     <mysql.connector.java.version>8.2.0</mysql.connector.java.version>
     
     <org.apache.commons.lang3.version>3.9</org.apache.commons.lang3.version>
-    <org.json.version>20231013</org.json.version>
-    <org.reflections.version>0.9.10</org.reflections.version>
+    <org.json.version>20240303</org.json.version>
+    <org.reflections.version>0.10.2</org.reflections.version>
     <sax.version>2.0.1</sax.version>
-    <slf4j.log4j12.version>1.7.28</slf4j.log4j12.version>
-    <swagger.version>1.5.23</swagger.version>
+    <slf4j.log4j12.version>2.0.16</slf4j.log4j12.version>
+    <swagger.version>1.6.14</swagger.version>
     <xml-apis.version>2.0.2</xml-apis.version>
-    <xom.version>1.3.2</xom.version>
-    
+    <xom.version>1.3.9</xom.version>
+
   </properties>
 
   <dependencyManagement>
@@ -161,19 +167,11 @@
         <version>${hibernate.entitymanager.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.hibernate</groupId>
+        <groupId>org.hibernate.validator</groupId>
         <artifactId>hibernate-validator</artifactId>
         <version>${hibernate.validator.version}</version>
       </dependency>
-      
-      <!-- 
-      <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>${mysql.connector.java.version}</version>
-      </dependency>
-       -->
-      
+
       <dependency>
         <groupId>com.mysql</groupId>
         <artifactId>mysql-connector-j</artifactId>
@@ -200,7 +198,7 @@
       <!-- Logging -->
       <dependency>
         <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-log4j12</artifactId>
+        <artifactId>slf4j-reload4j</artifactId>
         <version>${slf4j.log4j12.version}</version>
       </dependency>
 
@@ -215,11 +213,11 @@
         <artifactId>maven-resources-plugin</artifactId>
         <version>${maven.resources.plugin.version}</version>
       </dependency>
-	  <dependency>
+  	  <dependency>
     	<groupId>org.apache.maven</groupId>
     	<artifactId>maven-model</artifactId>
         <version>${maven.model.version}</version>
-	  </dependency>      
+	  </dependency>
 
       <!-- Required for Jersey and JSON -->
       <dependency>
@@ -264,10 +262,10 @@
         <version>${jersey.media.version}</version>
       </dependency>
       <dependency>
-    	<groupId>javax.ws.rs</groupId>
-    	<artifactId>javax.ws.rs-api</artifactId>
-    	<version>${javax.ws.version}</version>
-	  </dependency>
+        <groupId>javax.ws.rs</groupId>
+        <artifactId>javax.ws.rs-api</artifactId>
+        <version>${javax.ws.version}</version>
+      </dependency>
       <dependency>
         <groupId>asm</groupId>
         <artifactId>asm</artifactId>
@@ -287,8 +285,8 @@
 
 	  <!-- Amazon AWS -->
 	  <dependency>
-		<groupId>com.amazonaws</groupId>
-		<artifactId>aws-java-sdk</artifactId>
+        <groupId>software.amazon.awssdk</groupId>
+        <artifactId>s3</artifactId>
 		<version>${amazonaws.version}</version>
 	  </dependency>
 
@@ -302,6 +300,11 @@
         <groupId>cglib</groupId>
         <artifactId>cglib</artifactId>
         <version>${cglib.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.ow2.asm</groupId>
+        <artifactId>asm</artifactId>
+        <version>${asm.version}</version>
       </dependency>
 
       <!-- Sending email -->
@@ -350,20 +353,20 @@
         <artifactId>maven-invoker</artifactId>
         <version>${maven.invoker.version}</version>
       </dependency>
-      
+
 	<dependency>
         <groupId>org.apache.maven.plugin-tools</groupId>
         <artifactId>maven-plugin-annotations</artifactId>
         <version>${maven.plugin.annotations.version}</version>
         <scope>provided</scope>
       </dependency>
-      
+
       <dependency>
         <groupId>javax.xml.bind</groupId>
         <artifactId>jaxb-api</artifactId>
         <version>${javax.xml.bind.version}</version>
       </dependency>
-      
+
       <dependency>
         <groupId>com.sun.xml.bind</groupId>
         <artifactId>jaxb-core</artifactId>
@@ -392,28 +395,60 @@
         <version>${sax.version}</version>
       </dependency>
 
-
-	<!-- JSON -->
-	<dependency>
-    	<groupId>org.json</groupId>
-    	<artifactId>json</artifactId>
+      <!-- JSON -->
+      <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
         <version>${org.json.version}</version>
-    </dependency>
-    
-      <!-- 0.9.11 throw exceptions, keep older version -->
-	<dependency>
-    	<groupId>org.reflections</groupId>
-    	<artifactId>reflections</artifactId>
-        <version>${org.reflections.version}</version>
-	</dependency>
+      </dependency>
 
-	<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
-	<dependency>
-		<groupId>org.jsoup</groupId>
-		<artifactId>jsoup</artifactId>
-		<version>1.15.3</version>
-	</dependency>
-    
+      <!-- 0.9.11 throw exceptions, keep older version -->
+      <dependency>
+        <groupId>org.reflections</groupId>
+        <artifactId>reflections</artifactId>
+        <version>${org.reflections.version}</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+      <dependency>
+        <groupId>org.jsoup</groupId>
+        <artifactId>jsoup</artifactId>
+        <version>1.15.3</version>
+      </dependency>
+
+      <!-- New Jackson dependencies -->
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.module</groupId>
+        <artifactId>jackson-module-jaxb-annotations</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.dataformat</groupId>
+        <artifactId>jackson-dataformat-yaml</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
+      <!-- End Jackson dependencies -->
+
+      <dependency>
+    <groupId>jakarta.validation</groupId>
+    <artifactId>jakarta.validation-api</artifactId>
+        <version>${jakarta.validation.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -442,6 +477,8 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>${maven.compiler.plugin.version}</version>
           <configuration>
+            <source>${java.version}</source>
+            <target>${java.version}</target>
             <release>${java.version}</release>
           </configuration>
           <dependencies>
@@ -452,7 +489,7 @@
             </dependency>
           </dependencies>
         </plugin>
-        
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
@@ -469,7 +506,17 @@
             </includes>
             <skipTests>false</skipTests>
             <argLine>
-              --illegal-access=permit
+              --add-opens java.base/java.lang=ALL-UNNAMED
+              --add-opens java.base/java.util=ALL-UNNAMED
+              --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+              --add-opens java.base/java.io=ALL-UNNAMED
+              --add-opens java.base/java.math=ALL-UNNAMED
+              --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+              --add-opens java.base/java.net=ALL-UNNAMED
+              --add-opens java.base/java.text=ALL-UNNAMED
+              --add-opens java.desktop/java.awt.font=ALL-UNNAMED
+              --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+              --add-exports java.base/sun.security.action=ALL-UNNAMED
             </argLine>
           </configuration>
         </plugin>
@@ -514,6 +561,45 @@
               <goals>
                 <goal>display-dependency-updates</goal>
                 <goal>display-plugin-updates</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+
+        <!-- Add or update maven-plugin-plugin -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-plugin-plugin</artifactId>
+          <version>${maven.plugin.plugin.version}</version>
+          <configuration>
+            <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+          </configuration>
+        </plugin>
+
+        <plugin>
+          <groupId>org.owasp</groupId>
+          <artifactId>dependency-check-maven</artifactId>
+          <version>7.4.4</version>
+          <configuration>
+            <failBuildOnCVSS>7</failBuildOnCVSS>
+            <formats>
+              <format>HTML</format>
+              <format>JSON</format>
+            </formats>
+            <failOnError>false</failOnError>
+            <skipSystemScope>true</skipSystemScope>
+            <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
+            <retireJsAnalyzerEnabled>false</retireJsAnalyzerEnabled>
+            <nodeAnalyzerEnabled>false</nodeAnalyzerEnabled>
+            <nodeAuditAnalyzerEnabled>false</nodeAuditAnalyzerEnabled>
+            <suppressionFiles>
+            <suppressionFiles>${maven.multiModuleProjectDirectory}/suppressed.xml</suppressionFiles>
+            </suppressionFiles>
+          </configuration>
+          <executions>
+            <execution>
+              <goals>
+                <goal>check</goal>
               </goals>
             </execution>
           </executions>
